# backend/medication-management-api/api/src/types/index.ts
@@ -1,2 +1,16 @@
 // Export API types
 export * from './api'; 
+
+/**
+ * Enum for days of the week
+ * @enum {string}
+ */
+export enum DayOfWeek {
+  Sunday = 'Sunday',
+  Monday = 'Monday',
+  Tuesday = 'Tuesday',
+  Wednesday = 'Wednesday',
+  Thursday = 'Thursday',
+  Friday = 'Friday',
+  Saturday = 'Saturday'
+} 
